# ibeacon-scanner

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
android/: AndroidManifest.xml  build.gradle
android/src/io/github/nanamitm/ibeaconscanner/: QtBeaconScanner.java
qml/: AppTheme.qml  BeaconListItem.qml  HistoryTab.qml  Main.qml
src/: BeaconInfo.h  BeaconScanner.cpp  BeaconScanner.h  HaReceiver.cpp  HaReceiver.h  LocationHistory.cpp  LocationHistory.h  MqttReceiver.cpp  MqttReceiver.h  main.cpp
